--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: kde-no-move-max-win
 Section: misc
 Priority: optional
 Maintainer: Patrick Schleizer <adrelanos@riseup.net>
-Build-Depends: debhelper (>= 9), faketime
+Build-Depends: debhelper (>= 9), faketime, genmkfile
 Homepage: https://github.com/Whonix/kde-no-move-max-win
 Vcs-Browser: https://github.com/Whonix/kde-no-move-max-win
 Vcs-Git: https://github.com/Whonix/kde-no-move-max-win.git
